--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ left：靠左距离多少
 					<span class="line line-right"></span>
 					<span class="line line-bottom"></span>
 					<span class="line line-left"></span>
-				    TOUCh
+				    TOUCH
 				</a>
 			</div>
 		</div>
